--- a/Projetos de Atividades - Front_end_2/React/projeto/src/components/Header/header.module.css
+++ b/Projetos de Atividades - Front_end_2/React/projeto/src/components/Header/header.module.css
@@ -2,6 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: rgb(184, 184, 184);
+    padding: 20px 0;
+    margin-bottom: 20px;
 }
 
 .nav {
@@ -16,4 +19,6 @@
     align-items: center;
     justify-content: space-around;
     flex-direction: row;
+    list-style: none;
+    gap: 20px;
 }
