--- a/Projetos de Atividades - Front_end_2/React/projeto/src/components/Header/header.module.css
+++ b/Projetos de Atividades - Front_end_2/React/projeto/src/components/Header/header.module.css
@@ -1,10 +1,11 @@
 .header {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     background-color: rgb(184, 184, 184);
     padding: 20px 0;
     margin-bottom: 20px;
+    gap: 20px;
 }
 
 .nav {
