--- a/ProjetosFront_end_2/React/projeto/src/app/about/about.module.css
+++ b/ProjetosFront_end_2/React/projeto/src/app/about/about.module.css
@@ -12,13 +12,14 @@
 .div_pag > .titule {
     font-size: 25px;
     font-weight: 600;
-    margin: 20px 0 0 0;
+    margin: 20px 0;
 }
 
 .div_p {
     display: flex;
     align-items: center;
     flex-direction: column;
+    gap: 15px;
 }
 
 .paragrafo {
