--- a/ProjetosFront_end_2/React/atividade_policlinica/src/app/globals.css
+++ b/ProjetosFront_end_2/React/atividade_policlinica/src/app/globals.css
@@ -5,6 +5,10 @@
   --black: #000000;
   --dark_grey: #171717;
   --medium_grey: #363636;
+  --grey: #666666;
+
+  --dodgerblue:#0566BB;
+  --medium_dodgerblue:#4E97D7;
 }
 
 html,
