--- a/ProjetosFront_end_2/React/atividade_policlinica/src/app/page.module.css
+++ b/ProjetosFront_end_2/React/atividade_policlinica/src/app/page.module.css
@@ -1,13 +1,20 @@
 .contener_banner {
-    position: relative;
     width: 100%;
     height: 100%;
 }
 
-.banner {
-    width: 100%;
+/* .banner {
     height: 100%;
+    width: 100%;
+    object-fit: contain;
 }
+
+.img_banner {
+    position: absolute;
+    width: unset;
+    height: 100%;
+    object-fit: contain;
+} */
 
 .page_contener {
     text-align: center;
@@ -34,7 +41,26 @@
     font-size: 1.2rem;
     font-weight: 400;
     line-height: 1.60;
-    color: black;
+    color: var(--grey);
     max-width: 800px;
     margin: 0px auto 1rem;
+}
+
+.StarderButton {
+    background-color: var(--dodgerblue);
+    padding: 10px 20px;
+
+    font-family: 'Poppins';
+    color: var(--white);
+    font-size: 16px;
+    font-weight: 500;
+
+    border: none;
+    box-shadow: none;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+
+.StarderButton:hover {
+    background-color: var(--medium_dodgerblue);
 }
