--- a/ProjetosFront_end_2/React/atividade_policlinica/src/app/globals.css
+++ b/ProjetosFront_end_2/React/atividade_policlinica/src/app/globals.css
@@ -2,9 +2,11 @@
 
 :root {
   --white: #ffffff;
+  --whitesmoke:#F3F3F3;
   --black: #000000;
   --dark_grey: #171717;
-  --medium_grey: #363636;
+  --medium_grey-ligth: #3636366b;
+  --medium_black_ligth: #00000026;
   --grey: #666666;
 
   --dodgerblue:#0566BB;
