--- a/ProjetosFront_end_2/React/atividade_policlinica/src/app/page.module.css
+++ b/ProjetosFront_end_2/React/atividade_policlinica/src/app/page.module.css
@@ -1,20 +1,21 @@
+.contener_master {
+    margin-bottom: 40px;
+}
+
 .contener_banner {
     width: 100%;
     height: 100%;
 }
 
-/* .banner {
+.banner {
     height: 100%;
     width: 100%;
-    object-fit: contain;
 }
 
 .img_banner {
-    position: absolute;
-    width: unset;
-    height: 100%;
-    object-fit: contain;
-} */
+    width: 100%;   
+    
+}
 
 .page_contener {
     text-align: center;
@@ -33,7 +34,7 @@
 .text_inicio > .titulo_text{
     font-size: 2rem;
     font-weight: 600;
-    color: black;
+    color: var(--black);
     margin-bottom: 1rem;
 }
 
