--- a/ProjetosFront_end_2/React/atividade_policlinica/src/components/Header/header.module.css
+++ b/ProjetosFront_end_2/React/atividade_policlinica/src/components/Header/header.module.css
@@ -7,8 +7,9 @@
     align-items: center;
     flex-direction: row;
     padding: 10px 30px;
-    background-color: #FFFFFF;
-    box-shadow: 5px 4px 6px #3636366b;
+    background-color: var(--white);
+    box-shadow: 5px 4px 6px var(--medium_grey-ligth);
+    flex-wrap: wrap;
 }
 
 .logoContainer {
@@ -36,7 +37,7 @@
     text-decoration: none;
     font-size: 18px;
     font-weight: 500;
-    color: black;
+    color: var(--black);
     transition: 0.3s;
 }
 
@@ -55,7 +56,7 @@
     overflow: hidden;
     left: auto;
     width: 166px;
-    background-color: #FFFFFF;
+    background-color: var(--white);
 }
 
 .links_subemenu {
@@ -64,7 +65,7 @@
     font-size: 17px;
     font-weight: 500;
     text-decoration: none;
-    color: black;
+    color: var(--black);
 
     border-left: 5px solid transparent;
     transition: 0.4s;
@@ -76,13 +77,13 @@
 
 .links_subemenu:hover {
     width: 100%;
-    background-color: #F3F3F3;
-    box-shadow: 0 2px 2px #00000026;
-    border-left-color:#0566BB;
+    background-color: var(--whitesmoke);
+    box-shadow: 0 2px 2px var(--medium_black_ligth);
+    border-left-color:var(--dodgerblue);
 }
 
 .links_itens:hover {
-    color: #4E97D7;
+    color: var(--medium_dodgerblue);
 }
 
 .button_header{
@@ -90,11 +91,11 @@
 }
 
 .StarderButton {
-    background-color: #0566BB;
+    background-color: var(--dodgerblue);
     padding: 10px 20px;
 
     font-family: 'Poppins';
-    color: white;
+    color: var(--white);
     font-size: 15px;
     font-weight: 500;
 
@@ -105,5 +106,5 @@
 }
 
 .StarderButton:hover {
-    background-color: #4E97D7;
+    background-color: var(--medium_dodgerblue);
 }
