--- a/ProjetosFront_end_2/React/atividade_policlinica/src/app/pages/medicos/listar/page.module.css
+++ b/ProjetosFront_end_2/React/atividade_policlinica/src/app/pages/medicos/listar/page.module.css
@@ -1,8 +1,32 @@
+.contener_lista {
+    display: flex;
+    flex-direction: column;
+
+    margin: 0 auto;
+    padding: 20px;
+    background-color: var(--whitesmoke);
+    max-width: 1780px;
+}
+
+.header_list {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 40px;
+    gap: 40px;
+}
+
 .titulo_list{
+    text-align: center;
     font-size: 2rem;
     font-weight: 600;
     color: var(--black);
     margin-bottom: 1rem;
+}
+
+.contener_button {
+    display: flex;
+    align-items: flex-start;
 }
 
 .StarderButton {
@@ -22,4 +46,32 @@
 
 .StarderButton:hover {
     background-color: var(--medium_dodgerblue);
+}
+
+.table_list {
+    margin-top: 45px ;
+    width: 100%;
+    overflow-x: auto;
+}
+
+.tabela_geral {
+    width: 100%;
+    background-color: brown;
+    border-radius: 5px ;
+    border-collapse: separate;
+    border-spacing: 0 20px;
+}
+.header_table {
+    background-color: blue;
+}
+
+.colun_table, .dados_table{
+    text-align: center;
+}
+
+.colun_table {
+    font-size: 20px;
+    font-weight: 500;
+    padding: 5px;
+    color: black;
 }
