--- a/ProjetosFront_end_2/React/atividade_policlinica/src/app/pages/medicos/listar/page.module.css
+++ b/ProjetosFront_end_2/React/atividade_policlinica/src/app/pages/medicos/listar/page.module.css
@@ -35,7 +35,7 @@
 
     font-family: 'Poppins';
     color: var(--white);
-    font-size: 15px;
+    font-size: 17px;
     font-weight: 500;
 
     border: none;
@@ -48,66 +48,116 @@
     background-color: var(--medium_dodgerblue);
 }
 
+
 .table_list {
-    margin-top: 45px ;
-    width: 100%;
+    margin: 45px auto;
+    width: 95%;
     overflow-x: auto;
 }
 
 .tabela_geral {
     width: 100%;
-    background-color: brown;
-    border-radius: 5px ;
-    border-collapse: separate;
-    border-spacing: 0 20px;
+    border-radius: 10px;
+    border-collapse: collapse;
+    border-collapse: 20px;
+    overflow: hidden;
 }
+
 .header_table {
-    background-color: blue;
+    background-color: var(--dodgerblue);
+    height: 60px;
 }
 
-.colun_table, .dados_table{
+.conteudo_header > th {
     text-align: center;
-}
-
-.colun_table {
     font-size: 20px;
     font-weight: 500;
-    padding: 5px;
-    color: black;
+    padding: 10px;
+    color: var(--white);
 }
 
+.corpo_table {
+    background-color: var(--medium_whitesmoke);
+}
 
-.div_buscar {
-    width: 100vw;
-    height: 100vh;
+.conteudo_table {
+    cursor: pointer;
+    text-align: center;
+    border-radius: 10px;
+    border: 2px solid #ddd;
+    transition: 0.3s;
+}
+
+.conteudo_table > td {
+    font-size: 17px;
+    font-weight: 600;
+    color: var(--black);
+    padding: 14px;
+    height: 20px;
+    transition: 0.3s;
+}
+
+.conteudo_table:hover {
+    border-color: transparent;
+    background-color: var(--medium_grey);
+}
+
+.conteudo_buscar {
     position: fixed;
-    display: flex;
-    z-index: 10000;
-    background-color: azure;
-    overflow: auto;
-    padding: 20px 0;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--white);
+    border-radius: 10px;
+    padding: 20px;
+    width: 30%;
+    min-width: 300px;
+    max-height: auto;
+    overflow-y: auto;
+    z-index: 1000;
 }
 
 .header_buscar {
-    margin: 1px auto;
-    background-color: aquamarine;
-    width: 40%;
-    padding: 20px;
-    border-radius: 20px;
-    z-index: 100000;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 50px;
+    margin-bottom: 10px;
+}
+
+.titulo_buscar {
+    text-align: center;
+    font-size: 28px;
+    font-weight: 600;
+    color: var(--black);
+    margin-bottom: 1rem;
+}
+
+.fundo_pop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.contener_buscar {
+    padding: 0 15px;
+    width: 80%;
 }
 
 .input_buscar {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
+    width: 100%;
+    padding: 10px 5px;
+    border-radius: 10px;
+    color: #2e2e2e;
+    border: 1px solid var(--dodgerblue);
 }
 
-.button_sair {
-    padding: 20px 20px;
-    border-radius: 10px;
-    border: 1px solid brown;
-    width: 80%;
+.listaPesquisa {
+    list-style-type: none;
+    padding: 10px 0;
+    color: black;
 }
