--- a/ProjetosFront_end_2/React/atividade_policlinica/src/components/Header/header.module.css
+++ b/ProjetosFront_end_2/React/atividade_policlinica/src/components/Header/header.module.css
@@ -8,7 +8,7 @@
     flex-direction: row;
     padding: 10px 30px;
     background-color: var(--white);
-    box-shadow: 5px 4px 6px var(--medium_grey-ligth);
+    box-shadow: 5px 4px 6px var(--medium_grey_ligth);
     flex-wrap: wrap;
 }
 
