--- a/ProjetosFront_end_2/React/atividade_policlinica/src/components/Header/header.module.css
+++ b/ProjetosFront_end_2/React/atividade_policlinica/src/components/Header/header.module.css
@@ -109,3 +109,22 @@
     background-color: var(--medium_dodgerblue);
 }
 
+@media (max-width: 1070px) {
+    .conteudo_header {
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .nav_itens {
+        margin: 0;
+        flex-direction: column;
+        gap: 35px;
+    }
+
+    .button_header {
+        display: flex;
+        align-items: center;
+        margin: 30px 0 0 0;
+    }
+
+}
