--- a/ProjetosFront_end_2/React/atividade_policlinica/src/app/pages/agendamento/consultar/page.module.css
+++ b/ProjetosFront_end_2/React/atividade_policlinica/src/app/pages/agendamento/consultar/page.module.css
@@ -195,3 +195,21 @@
         flex-direction: column;
     }
 }
+
+@media (max-width: 515px) {
+    .conteudo_buscar {
+        min-width: 400px;
+        width: 25%;
+    }
+}
+
+@media (max-width: 500px) {
+    .titulo_list {
+        font-size: 1.9rem;
+    }
+
+    .conteudo_buscar {
+        min-width: 380px;
+        width: 20%;
+    }
+}
