--- a/ProjetosFront_end_2/React/atividade_policlinica/src/components/Header/header.module.css
+++ b/ProjetosFront_end_2/React/atividade_policlinica/src/components/Header/header.module.css
@@ -113,6 +113,7 @@
     .conteudo_header {
         align-items: center;
         flex-direction: column;
+        gap: 15px;
     }
 
     .nav_itens {
@@ -124,7 +125,7 @@
     .button_header {
         display: flex;
         align-items: center;
-        margin: 30px 0 0 0;
+        margin: 30px 0 20px 0;
     }
 
 }
